[project]
name = "rl-llm-tiny"
version = "0.1.0"
description = "Tiny GRPO + LoRA experiment: fine-tune a small LLM on 2-digit arithmetic with a verifiable reward."
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "peft>=0.19.1",
    "torch>=2.11.0",
    "transformers>=5.8.0",
    "trl>=1.3.0",
]
